--- a/products/templates/products/includes/product_card.html
+++ b/products/templates/products/includes/product_card.html
@@ -33,7 +33,8 @@
                     <br>
                     <small class="ml-3">
                         <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        <a type="button" class="text-danger" data-toggle="modal"
+                            data-target="#deleteProductModal">Delete</a>
                     </small>
                     {% endif %}
 
@@ -54,6 +55,26 @@
 
                     </a>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Delete Product Modal -->
+<div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Product!</h5>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure? This action cannot be undone!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <a type="button" class="btn btn-danger" href="{% url 'delete_product' product.id %}">Yes, Delete</a>
             </div>
         </div>
     </div>
