--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -49,9 +49,11 @@
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                    <a type="button" class="text-danger" data-toggle="modal"
+                        data-target="#deleteProductModal">Delete</a>
                 </small>
                 {% endif %}
+
                 <p class="mt-3">{{ product.description }}</p>
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
@@ -160,8 +162,10 @@
                         {% if user == review.reviewer %}
                         <small class="ml-3">
                             <a href="{% url 'edit_product_review' review.id %}">Edit</a> |
-                            <a class="text-danger" href="{% url 'delete_product_review' review.id %}">Delete</a>
+                            <a type="button" class="text-danger" data-toggle="modal"
+                                data-target="#deleteReview{{ review.id }}Modal">Delete</a>
                         </small>
+
                         {% endif %}
                     </div>
                     <div class="card-body">
@@ -173,6 +177,30 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Delete Review Modal -->
+            <div class="modal fade" id="deleteReview{{ review.id }}Modal" tabindex="-1"
+                aria-labelledby="deleteReview{{ review.id }}ModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content text-black">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Delete Review!</h5>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Are you sure? This action cannot be undone!</p>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-outline-black rounded-0"
+                                data-dismiss="modal">Cancel</button>
+                            <a type="button" class="btn btn-danger" href="{% url 'delete_product_review' review.id %}"
+                                id="{{ review.id }}">Yes,
+                                Delete</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
             {% endif %}
             {% endfor %}
 
@@ -180,6 +208,29 @@
     </div>
 </div>
 </div>
+
+
+<!-- Delete Product Modal -->
+<div class="modal fade" id="deleteProductModal" tabindex="-1" aria-labelledby="deleteProductModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete Product!</h5>
+                </button>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure? This action cannot be undone!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-black rounded-0" data-dismiss="modal">Cancel</button>
+                <a type="button" class="btn btn-danger" href="{% url 'delete_product' product.id %}">Yes, Delete</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 {% endblock %}
 
 {% block postloadjs %}
