--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -35,22 +35,22 @@
                             class="custom-select custom-select-sm rounded-0 border border-{% if current_sorting != 'None_None' %}info{% else %}black{% endif %}">
                             <option value="reset" {% if current_sorting == 'None_None' %} selected {% endif %}>Sort
                                 by...</option>
-                            <option value="price_asc" {% if current_sorting == 'price_asc' %} selected {% endif %}>Price
+                            <option value="price_asc" {% if current_sorting == 'price' %} selected {% endif %}>Price
                                 (low to high)</option>
-                            <option value="price_desc" {% if current_sorting == 'price_desc' %} selected {% endif %}>
+                            <option value="price_desc" {% if current_sorting == '-price' %} selected {% endif %}>
                                 Price (high to low)</option>
-                            <option value="rating_asc" {% if current_sorting == 'rating_asc' %} selected {% endif %}>
+                            <option value="rating_asc" {% if current_sorting == 'rating' %} selected {% endif %}>
                                 Rating (low to high)</option>
-                            <option value="rating_desc" {% if current_sorting == 'rating_desc' %} selected {% endif %}>
+                            <option value="rating_desc" {% if current_sorting == '-ratingc' %} selected {% endif %}>
                                 Rating (high to low)</option>
-                            <option value="name_asc" {% if current_sorting == 'name_asc' %} selected {% endif %}>Name
+                            <option value="name_asc" {% if current_sorting == 'name' %} selected {% endif %}>Name
                                 (A-Z)</option>
-                            <option value="name_desc" {% if current_sorting == 'name_desc' %} selected {% endif %}>Name
+                            <option value="name_desc" {% if current_sorting == '-namec' %} selected {% endif %}>Name
                                 (Z-A)</option>
-                            <option value="category_asc" {% if current_sorting == 'category_asc' %} selected
-                                {% endif %}>Category (A-Z)</option>
-                            <option value="category_desc" {% if current_sorting == 'category_desc' %} selected
-                                {% endif %}>Category (Z-A)</option>
+                            <option value="category_asc" {% if current_sorting == 'category' %} selected {% endif %}>
+                                Category (A-Z)</option>
+                            <option value="category_desc" {% if current_sorting == '-category' %} selected {% endif %}>
+                                Category (Z-A)</option>
                         </select>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                         {% if search_term or current_categories or current_sorting != 'None_None' %}
                         <span class="small"><a href="{% url 'products' %}">Products Home</a> | </span>
                         {% endif %}
-                        {{ products|length }} Products{% if search_term %} found for
+                        {{ paginator.count }} Products{% if search_term %} found for
                         <strong>"{{ search_term }}"</strong>{% endif %}
                     </p>
                 </div>
@@ -69,8 +69,8 @@
                     <div class="pagination mb-2">
                         <span class="step-links">
                             {% if page_obj.has_previous %}
-                            <a href="?page=1">&laquo; first</a>
-                            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                            <a href="?sort={{ current_sorting }}&page=1">&laquo; first</a>
+                            <a href="?sort={{ current_sorting }}&page={{ page_obj.previous_page_number }}">previous</a>
                             {% endif %}
 
                             <span class="current">
@@ -78,8 +78,10 @@
                             </span>
 
                             {% if page_obj.has_next %}
-                            <a href="?page={{ page_obj.next_page_number }}">next</a>
-                            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                            <a href="?sort={{ current_sorting }}&page={{ page_obj.next_page_number }}">next</a>
+                            <a
+                                href="?sort={{ current_sorting }}&page={{ page_obj.paginator.num_pages }}&ordering={{ current_sorting }}">last
+                                &raquo;</a>
                             {% endif %}
                         </span>
                     </div>
