--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -17,6 +18,7 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+    <!-- Title section -->
     <div class="row">
         <div class="col">
             <hr>
@@ -26,6 +28,7 @@
     </div>
 
     <div class="row">
+        <!-- Order summary section -->
         <div class="col-12 col-lg-6 order-lg-last mb-5">
             <p class="text-muted">Order Summary ({{ product_count }})</p>
             <div class="row">
@@ -36,6 +39,8 @@
                     <p class="mb-1 mt-0 small text-muted">Subtotal</p>
                 </div>
             </div>
+
+            <!-- Display bag items -->
             {% for item in bag_items %}
             <div class="row">
                 <div class="col-2 mb-1">
@@ -58,6 +63,8 @@
                 </div>
             </div>
             {% endfor %}
+
+            <!-- Order total and shipping cost -->
             <hr class="my-0">
             <div class="row text-black text-right">
                 <div class="col-7 offset-2">
@@ -72,15 +79,21 @@
                 </div>
             </div>
         </div>
+
+        <!-- Customer information section -->
         <div class="col-12 col-lg-6">
             <p class="text-muted">Please fill out the form below to complete your order</p>
             <form action="{% url 'checkout' %}" method="POST" id="payment-form">
                 {% csrf_token %}
+
+                <!-- Full name -->
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
                     {{ order_form.full_name | as_crispy_field }}
                     {{ order_form.email | as_crispy_field }}
                 </fieldset>
+
+                <!-- Address -->
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
                     {{ order_form.phone_number | as_crispy_field }}
@@ -90,6 +103,8 @@
                     {{ order_form.county | as_crispy_field }}
                     {{ order_form.postcode | as_crispy_field }}
                     {{ order_form.country | as_crispy_field }}
+
+                    <!-- Save info section -->
                     <div class="form-check form-check-inline float-right mr-0">
                         {% if user.is_authenticated %}
                         <label class="form-check-label" for="id-save-info">Save this delivery information to my
@@ -104,6 +119,8 @@
                         {% endif %}
                     </div>
                 </fieldset>
+
+                <!-- Payment section -->
                 <fieldset class="px-3">
                     <legend class="fieldset-label small text-black px-2 w-auto">Payment</legend>
                     <!-- A Stripe card element will go here -->
@@ -116,6 +133,7 @@
                     <input type="hidden" value="{{ client_secret }}" name="client_secret">
                 </fieldset>
 
+                <!-- Checkout or adjust bag -->
                 <div class="submit-button text-right mt-5 mb-2">
                     <a href="{% url 'view_bag' %}" class="btn btn-outline-black rounded-0">
                         <span class="icon">
@@ -140,6 +158,8 @@
         </div>
     </div>
 </div>
+
+<!-- Loading animation -->
 <div id="loading-overlay">
     <h1 class="text-light logo-font loading-spinner">
         <span class="icon">
