--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -6,6 +6,7 @@
 {% endblock %}
 
 {% block page_header %}
+<!-- Page header section -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -16,6 +17,8 @@
 {% block content %}
 <div class="overlay"></div>
 <div class="container">
+
+    <!-- Title section -->
     <div class="row">
         <div class="col">
             <hr>
@@ -27,6 +30,7 @@
         </div>
     </div>
 
+    <!-- Order summary section -->
     <div class="row">
         <div class="col-12 col-lg-7">
             <div class="order-confirmation-wrapper p-2 border">
@@ -36,6 +40,7 @@
                     </div>
                 </div>
 
+                <!-- Order number -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Order Number</p>
@@ -45,6 +50,7 @@
                     </div>
                 </div>
 
+                <!-- Order date -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Order Date</p>
@@ -54,12 +60,14 @@
                     </div>
                 </div>
 
+                <!-- Order details -->
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Order Details:</small>
                     </div>
                 </div>
 
+                <!-- Display items in order -->
                 {% for item in order.lineitems.all %}
                 <div class="row">
                     <div class="col-12 col-md-4">
@@ -74,12 +82,14 @@
                 </div>
                 {% endfor %}
 
+                <!-- Delivery info summary -->
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Delivering To:</small>
                     </div>
                 </div>
 
+                <!-- Full name -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Full Name</p>
@@ -89,6 +99,7 @@
                     </div>
                 </div>
 
+                <!-- Address -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Address 1</p>
@@ -158,12 +169,14 @@
                     </div>
                 </div>
 
+                <!-- Billing summary -->
                 <div class="row">
                     <div class="col">
                         <small class="text-muted">Billing Info:</small>
                     </div>
                 </div>
 
+                <!-- Order total -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Order Total</p>
@@ -173,6 +186,7 @@
                     </div>
                 </div>
 
+                <!-- Delivery cost -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Delivery</p>
@@ -182,6 +196,7 @@
                     </div>
                 </div>
 
+                <!-- Grand total -->
                 <div class="row">
                     <div class="col-12 col-md-4">
                         <p class="mb-0 text-black font-weight-bold">Grand Total</p>
@@ -194,6 +209,7 @@
         </div>
     </div>
 
+    <!-- Return user to profile if logged in, or home page -->
     <div class="row">
         <div class="col-12 col-lg-7 text-right">
             {% if from_profile %}
@@ -204,11 +220,11 @@
                 <span class="text-uppercase">Back to Profile</span>
             </a>
             {% else %}
-            <a href="" class="btn btn-black rounded-0 my-2">
+            <a href="{% url 'home' %}" class="btn btn-black rounded-0 my-2">
                 <span class="icon mr-2">
                     <i class="fas fa-gifts"></i>
                 </span>
-                <span class="text-uppercase">Now check out the latest deals!</span>
+                <span class="text-uppercase">Head back to the store!</span>
             </a>
             {% endif %}
         </div>
